refactor: Consolidate migrations and change Qdrant volume to local mount

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -108,7 +108,8 @@ services:
     restart: unless-stopped
 
 volumes:
-
+  # No named volumes - using local directory mounts
+  
 networks:
   ohra-network:
     driver: bridge
