fix: Add auth and rag models directories to Git
- Update .gitignore to exclude only ML model files, not code directories
- Add auth/models/ and rag/models/ directories to Git

--- a/.gitignore
+++ b/.gitignore
@@ -79,8 +79,14 @@ wandb/
 *.pth
 *.onnx
 **/DATASET/
-models/
+**/models/*.pt
+**/models/*.pth
+**/models/*.onnx
 checkpoints/
+
+# allow code directory models
+!projects/**/models/
+!features/**/models/
 
 # OS
 .DS_Store
