--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -91,6 +91,9 @@ services:
       OPENAI_API_BASE_URL: http://backend:8000/v1
       OPENAI_API_KEY: ${OPENAI_API_KEY:-sk-placeholder}
       
+      # Webhook URL for user creation
+      WEBHOOK_URL: http://backend:8000/v1/webhook
+      
       # WebUI Settings
       ENABLE_SIGNUP: ${WEBUI_ENABLE_SIGNUP:-true}
       DEFAULT_USER_ROLE: ${WEBUI_DEFAULT_USER_ROLE:-user}
