feat(rag): implement hybrid search with RRF
- Add retrieval module with vector, keyword, and hybrid retrievers
- Implement BM25 keyword search using rank-bm25
- Implement RRF (Reciprocal Rank Fusion) for combining search results
- Add search_mode configuration (vector/keyword/hybrid)
- Add rrf_k configuration for RRF constant (default: 60)
- Integrate hybrid search into RAG pipeline

Closes: PRD Phase 1 - Hybrid Search

--- a/env.example
+++ b/env.example
@@ -13,6 +13,9 @@ OHRA_QDRANT_PORT=6333
 OHRA_QDRANT_COLLECTION_NAME=ohra_documents
 
 # backend
+OHRA_ADMIN_EMAIL=admin@ohra.local
+OHRA_ADMIN_NAME=Admin
+OHRA_ADMIN_EXTERNAL_ID=
 
 # worker
 OHRA_ATLASSIAN_EMAIL=your-email@example.com
