--- a/projects/ohra-backend/pyproject.toml
+++ b/projects/ohra-backend/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "greenlet>=3.1.0",
     "langchain-core>=1.0.4",
     "alembic>=1.16.1",
+    "rank-bm25>=0.2.2",
 ]
 
 [dependency-groups]
