refactor: clean up code documentation and apply ruff rules
- Remove all docstrings per REFACTORING_PLAN.md
- Remove logger statements from worker code
- Remove unnecessary comments
- Clean up __init__.py files
- Delete create_test_api_key.py (auto-handled in conftest.py)
- Apply ruff 120 char line length and fix all errors

Changes:
- Backend: Remove docstrings/comments from RAG pipeline, auth, settings
- Worker: Remove loggers/docstrings from main, base, jira, confluence, utils
- Improve code readability with developer-focused concise style

--- a/.gitignore
+++ b/.gitignore
@@ -125,3 +125,7 @@ projects/*/data/
 projects/*/projects/
 experiments/*/__pycache__/
 experiments/*/data/
+
+# Test results
+**/tests/results/
+run_all_tests.sh
