--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,8 +56,8 @@ services:
       context: .
       dockerfile: docker/Dockerfile.worker
     container_name: ohra-worker
-    #command: python -m ohra.workers.sync.main all --since 2024-01-01
-    command: python -m ohra.workers.sync.main all --schedule ${WORKER_SYNC_INTERVAL_HOURS:-6}
+    command: python -m ohra.workers.sync.main all --since 2024-01-01
+    # command: python -m ohra.workers.sync.main all --schedule ${WORKER_SYNC_INTERVAL_HOURS:-6}
     environment:
       OHRA_ATLASSIAN_EMAIL: ${OHRA_ATLASSIAN_EMAIL}
       OHRA_ATLASSIAN_BASE_URL: ${OHRA_ATLASSIAN_BASE_URL}
