--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   # Qdrant Vector Store
   qdrant:
-    image: qdrant/qdrant:latest
+    image: qdrant/qdrant:v1.16
     container_name: ohra-qdrant
     ports:
       - "${QDRANT_PORT:-6333}:6333"
@@ -57,7 +57,7 @@ services:
       dockerfile: docker/Dockerfile.worker
     container_name: ohra-worker
     command: python -m ohra.workers.sync.main all --since 2024-01-01
-    # command: python -m ohra.workers.sync.main all --schedule ${WORKER_SYNC_INTERVAL_HOURS:-6}
+    #command: python -m ohra.workers.sync.main all --schedule ${WORKER_SYNC_INTERVAL_HOURS:-6}
     environment:
       OHRA_ATLASSIAN_EMAIL: ${OHRA_ATLASSIAN_EMAIL}
       OHRA_ATLASSIAN_BASE_URL: ${OHRA_ATLASSIAN_BASE_URL}
